infra/k3s/base/valkey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: boringstack
  labels:
    app: valkey
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: valkey
